--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ header section {
     gap: 10px;
 }
 
-.login {
+.container {
     border-color: #34A853;
     height: 48px;
     width: 140px;
@@ -39,7 +39,17 @@ header section {
     color: #FFFFFF;
 }
 
+.login {
+    color: #15803D;
+    text-decoration: none;
+}
+
 .signup {
+    color: #FFFFFF;
+    text-decoration: none;
+}
+
+.container-2 {
     color: #15803D;
     height: 48px;
     width: 140px;
@@ -54,7 +64,7 @@ body {
 }
 
 h1 {
-    position: center;
+    justify-content: center;
     font-size: 64px;
     font-style: semibold;
     line-height: 80px;
@@ -64,7 +74,7 @@ h1 {
 }
 
 p {
-    position: center;
+    justify-content: center;
     font-size: 24px;
     color: #3C383E;
     font-style: regular;
