--- a/styles.css
+++ b/styles.css
@@ -30,30 +30,29 @@ header section {
 }
 
 .container {
-    border-color: #34A853;
     height: 48px;
     width: 140px;
-    border-radius: 8px;
     padding: 12px 24px;
-    border: 1px;
-    color: #FFFFFF;
 }
 
 .login {
     color: #15803D;
     text-decoration: none;
+    border: 1px solid #34A853;
+    background-color: #FFFFFF;
+    border-radius: 8px;
 }
 
 .signup {
     color: #FFFFFF;
     text-decoration: none;
+    background-color: #15803D;
+    border-radius: 8px;
 }
 
-.container-2 {
-    color: #15803D;
+.container-1 {
     height: 48px;
     width: 140px;
-    border-radius: 8px;
     padding: 12px 24px;
 }
 
@@ -78,4 +77,8 @@ p {
     font-size: 24px;
     color: #3C383E;
     font-style: regular;
+}
+
+body section {
+    display: flex;
 }
