--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,9 @@ header section {
     border: 1px solid #34A853;
     background-color: #FFFFFF;
     border-radius: 8px;
+    font-size: 16px;
+    line-height: 24px;
+    justify-content: center;
 }
 
 .signup {
@@ -48,6 +51,9 @@ header section {
     text-decoration: none;
     background-color: #15803D;
     border-radius: 8px;
+    font-size: 16px;
+    line-height: 24px;
+    justify-content: center;
 }
 
 .container-1 {
@@ -69,7 +75,6 @@ h1 {
     line-height: 80px;
     font-weight: 600;
     font: poppins;
-
 }
 
 p {
@@ -81,4 +86,21 @@ p {
 
 body section {
     display: flex;
+    justify-content: center;
+}
+
+.container-2 {
+
+}
+
+.jaf {
+
+}
+
+.container-3 {
+
+}
+
+.bap {
+
 }
