--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
-header{
+header {
     background-color:white;
-    display: grid;
+    display: flex;
     grid-template-columns: 1fr 3fr;
     height: 96px;
     justify: space-between;
@@ -13,7 +13,6 @@ header{
 }
 
 header div {
-    justify-content: center;
     display: inline-block;
     margin-right: 40px;
     width: 478px;
@@ -21,7 +20,6 @@ header div {
 }
 
 header section {
-    justify-content: right;
     width: 296px;
     height: 48px;
     margin-right: 16px;
@@ -43,7 +41,7 @@ header section {
     border-radius: 8px;
     font-size: 16px;
     line-height: 24px;
-    justify-content: center;
+    text-align: center;
 }
 
 .signup {
@@ -53,7 +51,7 @@ header section {
     border-radius: 8px;
     font-size: 16px;
     line-height: 24px;
-    justify-content: center;
+    text-align: center;
 }
 
 .container-1 {
@@ -64,12 +62,11 @@ header section {
 
 body {
     background-color: white;
-    display: grid;
+    display: flex;
     justify: space-between;
 }
 
 h1 {
-    justify-content: center;
     font-size: 64px;
     font-style: semibold;
     line-height: 80px;
