--- a/styles.css
+++ b/styles.css
@@ -16,11 +16,13 @@ header {
     justify: space-between;
     padding: 25px 100px;
     width: 100vm;
+    align-content: center;
 }
 
 header section div a {
     font-size: 16px;
-    line-height: 24px:
+    line-height: 24px;
+    font-color: black;
 }
 
 .logo {
@@ -31,8 +33,9 @@ header section div a {
     width: 478px;
     height: 48px;
     gap: 40px
-    display: inline-block
+    display: flex;
     text-align: center;
+    align-content: center;
 }
 
 .home {
@@ -70,6 +73,8 @@ header section {
     border: 1px solid #34A853;
     background-color: #FFFFFF;
     border-radius: 8px;
+    display: flex;
+    align-content: center;
 }
 
 .login {
@@ -94,6 +99,8 @@ header section {
     padding: 12px 24px;
     background-color: #15803D;
     border-radius: 8px;
+    display: flex;
+    align-content: center;
 }
 
 h1 {
