--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,6 @@ body {
     display: flex;
     flex-direction: column;
     background-color: #FFFFFF;
-
 }
 
 a {
@@ -15,7 +14,6 @@ header {
     display: flex;
     height: 96px;
     justify-content: space-between;
-    padding: 25px 100px;
     width: 100vw;
     align-content: center;
 }
@@ -24,6 +22,7 @@ header section div a {
     font-size: 16px;
     line-height: 24px;
     color: black;
+    text-decoration: none;
 }
 
 .logo {
@@ -37,7 +36,7 @@ header section div a {
     gap: 40px;
     display: flex;
     text-align: center;
-    align-items: center;
+    align-content: center;
 }
 
 .home {
@@ -84,7 +83,7 @@ header section {
     text-decoration: none;
     font-size: 16px;
     line-height: 24px;
-    text-align: center;
+    align-content: center;
 }
 
 .signup {
@@ -92,7 +91,7 @@ header section {
     text-decoration: none;
     font-size: 16px;
     line-height: 24px;
-    text-align: center;
+    align-content: center;
 }
 
 .container-1 {
@@ -111,7 +110,7 @@ h1 {
     line-height: 80px;
     font-weight: 600;
     font: poppins;
-    text-align: center;
+    align-content: center;
     margin: 0;
 }
 
@@ -127,21 +126,60 @@ p {
 body section {
     display: flex;
     justify-content: center;
-    text-align: center;
+    align-content: center;
 }
 
 .container-2 {
-
+    background-color: #FFFFFF;
+    width: 178px;
+    height: 48px;
+    border-radius: 8px;
+    border: 1px solid #34A853;
+    padding: 12px 24px;
+    margin: 10px;
 }
 
 .jaf {
-
+    color: #15803D;
+    font-size: 16px;
+    line-height: 24px;
 }
 
 .container-3 {
-
+    background-color: #15803D;
+    width: 224px;
+    height: 48px;
+    padding: 12px 24px;
+    border-radius: 8px;
+    margin: 10px;
 }
 
 .bap {
+    color: #FFFFFF;
+    font-size: 16px;
+    line-height: 24px;
+}
 
+.container-4 {
+    width: 1440px;
+    height: 606px;
+}
+
+.container-5 {
+    width: 1240px;
+    height: 394px;
+    padding: 0px 16px;
+}
+
+h2 {
+    color: #333333
+    font-size: 40px;
+    line-height: 36px;
+    text-align: center;
+}
+
+.wcf {
+    font-size: 20px;
+    line-height: 36px;
+    color: #3C383E;
 }
