--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,8 @@ header {
     justify-content: space-between;
     width: 100vw;
     align-content: center;
+    padding: 24px 100px;
+    margin: 0;
 }
 
 header section div a {
@@ -65,6 +67,11 @@ header section {
     height: 48px;
     margin-right: 16px;
     gap: 10px;
+}
+
+.acct {
+    width: 296px;
+    height: 48px;
 }
 
 .container {
@@ -161,14 +168,16 @@ body section {
 }
 
 .container-4 {
-    width: 1440px;
+    width: 100vw;
     height: 606px;
 }
 
 .container-5 {
-    width: 1240px;
+    width: 100vw;
     height: 394px;
     padding: 0px 16px;
+    display: flex;
+    align-content: center;
 }
 
 h2 {
@@ -183,3 +192,32 @@ h2 {
     line-height: 36px;
     color: #3C383E;
 }
+
+.container-6 {
+    width: 1208px;
+    height: 256px;
+    justify-content: space-between;
+}
+
+.continer-7 {
+    width: 386.67px;
+    height: 256px;
+    border-radius: 8px;
+    padding: 24px;
+    color: #F9FAFB;
+}
+
+h4 {
+    font-style: bold;
+    font-size: 16px;
+    color: #333333;
+    line-height: 24px;
+    text-align: center;
+}
+
+.txt {
+    font-size: 14px;
+    line-height: 24px;
+    color: #3C383E;
+}
+
