--- a/styles.css
+++ b/styles.css
@@ -203,7 +203,8 @@ h2 {
     width: 1208px;
     height: 256px;
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
+    gap: 10px;
 }
 
 .container-7 {
@@ -211,8 +212,9 @@ h2 {
     height: 256px;
     border-radius: 8px;
     padding: 24px;
-    justify-content: space-between;
+    flex-direction: coloumn;
     background-color: #F9FAFB;
+    margin: 0px 10px 0px 0px;
 }
 
 h4 {
@@ -233,4 +235,16 @@ h4 {
     width: 100vw;
     height: 747px;
     padding: 100px 0px;
+}
+
+.container-9 {
+    height: 325px;
+    width: 608px;
+    gap: 24px;
+}
+
+.for {
+    font-style: semibold;
+    font-size: 28px;
+    line-height: 34px;
 }
