--- a/styles.css
+++ b/styles.css
@@ -201,11 +201,12 @@ h2 {
 }
 
 .container-6 {
-    width: 1208px;
+    width: 100vw;
     height: 256px;
     display: flex;
     justify-content: space-between;
     gap: 10px;
+    align-content: center;
 }
 
 .container-7 {
