--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,9 @@ body {
 a {
     text-decoration: none;
     color: black;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 }
 
 header {
@@ -338,6 +341,8 @@ h4 {
     justify-content: center;
     align-items: center;
     display: flex;
+    flex-direction: column;
+    background-color: 
 }
 
 .fpa {
@@ -394,4 +399,18 @@ h5 {
     border-radius: 8px;
     gap: 10px;
     justify-content: center;
+}
+
+.container-16 {
+    width: 100vw;
+    height: 544px;
+    color: #FFFFFF;
+    padding: 60px 100px;
+}
+
+.con16-txt {
+    color: #333333;
+    font-size: 32px;
+    line-height: 42px;
+    text-align: center;
 }
