--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,7 @@
 body {
-    display: flex;
-    flex-direction: column;
     background-color: #FFFFFF;
-    align-items: center;
+    margin: 0;
+    padding: 0;
 }
 
 a {
@@ -18,7 +17,7 @@ header {
     display: flex;
     height: 96px;
     justify-content: space-between;
-    width: 100vw;
+    width: 100%;
     align-content: center;
     padding: 24px 100px;
     margin: 0;
@@ -193,7 +192,9 @@ body section {
 }
 
 .container-5 {
-    width: 1440px;
+    max-width: 1440px;
+    width: 100%;
+    margin: auto;
     height: 394px;
     padding: 0px 16px;
     display: flex;
@@ -217,7 +218,9 @@ h2 {
 }
 
 .container-6 {
-    width: 100vw;
+    width: 100%;
+    max-width: 1240px;
+    margin: auto;
     height: 256px;
     display: flex;
     justify-content: space-between;
@@ -252,7 +255,9 @@ h4 {
 }
 
 .container-8 {
-    width: 1440px;
+    max-width: 1440px;
+    width: 100%;
+    margin: auto;
     height: 747px;
     padding: 100px 0px;
     display: flex;
@@ -288,7 +293,9 @@ h4 {
     justify-content: space-between;
     gap: 24px;
     height: 416px;
-    width: 1440px;
+    max-width: 1440px;
+    width: 100%;
+    margin: auto;
     padding: 40px 100px;
 }
 
@@ -303,7 +310,7 @@ h4 {
 .container-11 {
     background-color: #EAFAF0;
     height: 303px;
-    width: 100vw;
+    width: 100%;
     padding: 60px 100px;
     justify-content: space-between;
     display: flex;
@@ -335,7 +342,7 @@ h4 {
 }
 
 .container-13 {
-    width: 100vw;
+    width: 100%;
     height: 964px;
     gap: 48px;
     justify-content: center;
@@ -353,7 +360,9 @@ h4 {
 }
 
 .container-15 {
-    width: 1240px;
+    max-width: 1240px;
+    width: 100%;
+    margin:auto;
     height: 497px;
     gap: 16px;
     display: flex;
@@ -401,10 +410,12 @@ h5 {
 }
 
 .container-16 {
-    width: 100vw;
+    width: 100%;
     height: 544px;
     color: #FFFFFF;
     padding: 60px 100px;
+    flex-direction: column;
+    text-align: left;
 }
 
 .con16-txt {
@@ -412,4 +423,48 @@ h5 {
     font-size: 32px;
     line-height: 42px;
     text-align: center;
+}
+
+.cont16 {
+    height: 344px;
+    width: 1240px;
+    gap: 16px;
+}
+
+.subcont16 {
+    height: 56px;
+    width: 1240px;
+    background-color: #F9FAFB;
+    border: solid 1px #DCDCDC;
+    border-radius: 8px;
+    padding: 16px;
+    margin: 16px 0;
+    text-align-last: left;
+    align-content: center;
+}
+
+.subcont16-txt {
+    font-size: 14px;
+    color: #333333;
+    line-height: 24px;
+}
+
+.container-17 {
+    height: 441px;
+    width: 100%;
+    max-width: 1440px;
+    background-color: Black color/neutral white 50;
+    flex-direction: column;
+}
+
+.cont17-hdr {
+    font-size: 48px;
+    line-height: 72px;
+    color: Black color/Main black default;
+}
+
+.cont17-p {
+    font-size: 16px;
+    line-height: 24px;
+    color: Black color/Main black default;
 }
