--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,8 @@ body {
     background-color: #FFFFFF;
     margin: 0;
     padding: 0;
+    max-width: 1440px;
+    width: 100%;
 }
 
 a {
@@ -18,6 +20,7 @@ header {
     height: 96px;
     justify-content: space-between;
     width: 100%;
+    max-width: 1440px;
     align-content: center;
     padding: 24px 100px;
     margin: 0;
@@ -189,6 +192,8 @@ body section {
 .container-4 {
     width: 100vw;
     height: 606px;
+    overflow-x: scroll;
+    white-space: nowrap;
 }
 
 .container-5 {
@@ -453,18 +458,50 @@ h5 {
     height: 441px;
     width: 100%;
     max-width: 1440px;
-    background-color: Black color/neutral white 50;
+    background-color: #E8FFD9;
     flex-direction: column;
+    margin: 0;
+    gap: 40px;
 }
 
 .cont17-hdr {
     font-size: 48px;
     line-height: 72px;
     color: Black color/Main black default;
+    margin: 0;
 }
 
 .cont17-p {
     font-size: 16px;
     line-height: 24px;
     color: Black color/Main black default;
+}
+
+.anchor {
+    max-width: 1440px;
+    width: 100%;
+    gap: 16px;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+}
+
+.start-selng {
+    background-color: #FFFFFF;
+    border: 1px solid #34A853;
+    padding: 12px 24px;
+    border-radius: 8px;
+    align-items: center;
+}
+
+.start-shpng {
+    background-color: #15803D;
+    border-radius: 8px;
+    padding: 12px 24px;
+    align-items: center;
+}
+
+footer {
+    background-color: #0F1419;
+    color: white;
 }
