--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,6 @@ body {
     background-color: #FFFFFF;
     margin: 0;
     padding: 0;
-    max-width: 1440px;
     width: 100%;
 }
 
@@ -20,11 +19,10 @@ header {
     height: 96px;
     justify-content: space-between;
     width: 100%;
-    max-width: 1440px;
     align-content: center;
-    padding: 24px 100px;
     margin: 0;
-    overflow: hidden;
+    padding: 24px 100px;
+    box-sizing: border-box;
 }
 
 header section div a {
@@ -88,6 +86,10 @@ h1 {
     text-align: center;
 }
 
+h5{
+    margin: 0;
+}
+
 .container {
     height: 48px;
     width: 140px;
@@ -107,7 +109,7 @@ h1 {
     font-size: 16px;
     line-height: 24px;
     justify-content: center;
-    align-items: center;
+    text-align: center;
 }
 
 .signup {
@@ -116,7 +118,7 @@ h1 {
     font-size: 16px;
     line-height: 24px;
     justify-content: center;
-    align-items: center;
+    text-align: center;
 }
 
 .container-1 {
@@ -128,6 +130,20 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.con {
+    display: flex;
+    gap: 40px;
+    height: 581px;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.sub-con {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
 }
 
 h1 {
@@ -159,6 +175,7 @@ body section {
 }
 
 .container-2 {
+    display: flex;
     background-color: #FFFFFF;
     width: 178px;
     height: 48px;
@@ -166,47 +183,57 @@ body section {
     border: 1px solid #34A853;
     padding: 12px 24px;
     margin: 10px;
+    align-items: center;
+    justify-content: center;
 }
 
 .jaf {
     color: #15803D;
     font-size: 16px;
     line-height: 24px;
+    align-items: center;
 }
 
 .container-3 {
+    display: flex;
     background-color: #15803D;
     width: 224px;
     height: 48px;
     padding: 12px 24px;
     border-radius: 8px;
     margin: 10px;
+    align-items: center;
+    justify-content: center;
 }
 
 .bap {
     color: #FFFFFF;
     font-size: 16px;
     line-height: 24px;
+    justify-content: center;
+    text-align: center;
 }
 
 .container-4 {
-    width: 100vw;
+    width: 100%;
     height: 606px;
     overflow-x: scroll;
     white-space: nowrap;
+    display: flex;
+    justify-content: center;
 }
 
 .container-5 {
-    max-width: 1440px;
     width: 100%;
     margin: auto;
-    height: 394px;
-    padding: 0px 16px;
+    height: 522px;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    gap: 10px;
+    gap: 48px;
+    padding: 64px 100px;
+    box-sizing: border-box;
 }
 
 h2 {
@@ -214,12 +241,27 @@ h2 {
     font-size: 40px;
     line-height: 36px;
     text-align: center;
+    margin: 0;
+}
+
+.wcf-con {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding:  0px 309px;
+    margin: 0;
 }
 
 .wcf {
-    font-size: 20px;
+    font-size: 40px;
     line-height: 36px;
     color: #3C383E;
+}
+
+.wcf-p {
+    margin: 0;
+    font-size: 20px;
+    line-height: 36px;
 }
 
 .container-6 {
@@ -229,7 +271,7 @@ h2 {
     height: 256px;
     display: flex;
     justify-content: space-between;
-    gap: 10px;
+    gap: 24px;
     align-items: center;
     justify-content: center;
 }
@@ -260,13 +302,23 @@ h4 {
 }
 
 .container-8 {
-    max-width: 1440px;
     width: 100%;
     margin: auto;
     height: 747px;
-    padding: 100px 0px;
     display: flex;
     flex-direction: column;
+    padding: 100px;
+    box-sizing: border-box;
+    gap: 1px;
+    justify-content: center;
+}
+
+.sub-con8 {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 24px 309px;
+    min-height: 131px;
 }
 
 .hfw {
@@ -291,17 +343,47 @@ h4 {
     gap: 24px;
     display: flex;
     flex-direction: column;
+    text-align: left;
+    align-items:flex-start;
+}
+
+.container-9 ol {
+    list-style: none;
+    padding-left: 0;
+    counter-reset: list-counter;
+}
+
+.container-9 li {
+    position: relative;
+}
+
+.container-9 li::before {
+    counter-increment: list-counter;
+    content: counter(list-counter);
+    position: absolute;
+    left: -48px;
+    top: 0;
+    width: 30px;
+    height: 32px;
+    border-radius: 50%;
+    background-color: #DCFCE7;
+    color: #15803D;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+    font-size: 16px;
 }
 
 .container-10 {
     display: flex;
     justify-content: space-between;
     gap: 24px;
-    height: 416px;
-    max-width: 1440px;
+    min-height: 416px;
     width: 100%;
     margin: auto;
     padding: 40px 100px;
+    box-sizing: border-box;
 }
 
 .for {
@@ -309,17 +391,37 @@ h4 {
     font-size: 28px;
     line-height: 34px;
     color: #363A49;
-    text-align: center;
+    text-align: left;
+    align-self: flex-start;
+    margin: 0px;
+}
+
+.ol-hd {
+    text-align: left;
+}
+
+.ol-p {
+    text-align: left;
+}
+
+ol {
+    margin: 0;
+    padding-left: 40px;
+}
+
+li {
+    text-align: left;
 }
 
 .container-11 {
     background-color: #EAFAF0;
     height: 303px;
     width: 100%;
-    padding: 60px 100px;
     justify-content: space-between;
     display: flex;
     gap: 24px;
+    padding: 60px 100px;
+    box-sizing: border-box;
 }
 
 .container-12 {
@@ -348,12 +450,20 @@ h4 {
 
 .container-13 {
     width: 100%;
-    height: 964px;
-    gap: 48px;
+    min-height: 964px;
+    gap: 53px;
     justify-content: center;
     align-items: center;
     display: flex;
     flex-direction: column;
+    padding: 100px;
+    box-sizing: border-box;
+}
+
+.subcon-13 {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
 }
 
 .fpa {
@@ -384,6 +494,12 @@ h4 {
     flex-direction: column;
 }
 
+.subcon-14 {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
+
 h5 {
     font-size: 24px;
     font-style: bold;
@@ -396,12 +512,16 @@ h5 {
     line-height: 24px;
     color: #15803D;
     font-style: medium;
+    text-align: left;
+    margin: 0;
 }
 
 .p3 {
     font-size: 18px;
     line-height: 19.2px;
     color: #3C383E;
+    text-align: left;
+    margin: 0;
 }
 
 .sap {
@@ -411,16 +531,23 @@ h5 {
     padding: 12px 24px;
     border-radius: 8px;
     gap: 10px;
-    justify-content: center;
+    color: white;
+    align-content: center;
+    font-style: bold;
+    text-align: center;
+    font-size: 16px;
 }
 
 .container-16 {
+    display: flex;
     width: 100%;
-    height: 544px;
+    min-height: 544px;
     color: #FFFFFF;
-    padding: 60px 100px;
     flex-direction: column;
     text-align: left;
+    padding: 60px 100px;
+    box-sizing: border-box;
+    gap: 24px;
 }
 
 .con16-txt {
@@ -455,13 +582,13 @@ h5 {
 }
 
 .container-17 {
-    height: 441px;
+    min-height: 441px;
     width: 100%;
-    max-width: 1440px;
     background-color: #E8FFD9;
     flex-direction: column;
     margin: 0;
     gap: 40px;
+    display: flex;
 }
 
 .cont17-hdr {
@@ -478,7 +605,6 @@ h5 {
 }
 
 .anchor {
-    max-width: 1440px;
     width: 100%;
     gap: 16px;
     align-items: center;
@@ -504,4 +630,5 @@ h5 {
 footer {
     background-color: #0F1419;
     color: white;
+    padding: 100px;
 }
