--- a/styles.css
+++ b/styles.css
@@ -548,6 +548,7 @@ h5 {
     padding: 60px 100px;
     box-sizing: border-box;
     gap: 24px;
+
 }
 
 .con16-txt {
@@ -555,10 +556,11 @@ h5 {
     font-size: 32px;
     line-height: 42px;
     text-align: center;
+    margin: 0;
 }
 
 .cont16 {
-    height: 344px;
+    min-height: 344px;
     width: 1240px;
     gap: 16px;
 }
@@ -628,7 +630,80 @@ h5 {
 }
 
 footer {
+    display: flex;
+    flex-direction: column;
     background-color: #0F1419;
     color: white;
     padding: 100px;
+    min-height: 586px;
+    gap: 24px;
+    justify-content: center;
 }
+
+footer div {
+    display: flex;
+    justify-content: space-between;
+    gap: 128px;
+}
+
+.frame-1 {
+    width: 436;
+    height: 145;
+    gap: 8px;
+    opacity: 1;
+}
+
+.frame-1txt {
+    color: #FFFFFF;
+    font-size: 20px;
+    line-height: 36px;
+    text-align: left;
+    margin: 0;
+}
+
+.frame-2 {
+    height: 197px;
+    width: 676px;
+    gap: 16px;
+}
+
+.frame-3 {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+
+h6 {
+    margin: 0;
+    color: #FFFFFF;
+    font-size: 16px;
+    text-align: left;
+}
+
+.frame-2txt {
+    font-size: 14px;
+    color: #FFFFFF;
+    text-align: left;
+    padding: 8px;
+}
+
+hr {
+    width: 100%;               
+    height: 2px;               
+    background-color: #FFFFFF;
+    border: none;              
+    margin: 24px 0;            
+}
+
+.frame-4 {
+    display: flex;
+    gap: 32px;
+    width: 1240px;
+    height: 56px;
+}
+
+.frame-4 a {
+    text-decoration: underline;
+    color: #FFFFFF;
+}
+
