--- a/mrk-styles.css
+++ b/mrk-styles.css
@@ -152,3 +152,36 @@ button {
     height: 48px;
     color: white;
 }
+
+@media screen and (max-width: 768px) {
+    body {
+        max-width: 100%;
+        align-items: center;
+        display: flex;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .container {
+        max-width: 100%;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .container-2 {
+        max-width: 100%;
+        flex-direction: column;
+        align-items: flex-start;
+        height: max-content;
+        max-height: max-content;
+    }
+
+    .container-3 {
+        max-width: 100%;
+        flex-direction: column;
+        align-items: flex-start;
+        box-sizing: border-box;
+        height: max-content;
+        gap: 80px;
+    }
+}
