--- a/order.css
+++ b/order.css
@@ -65,7 +65,7 @@ h1 {
     font-size: 20px;
     line-height: 32px;
     letter-spacing: 0%;
-    align-items: center;
+    align-self: center;
 }
 
 .shop {
@@ -82,10 +82,52 @@ h1 {
 
 .container-1 {
     display: flex;
+    align-self: flex-start;
 }
 
 button {
     border: none;
     background-color: #FFFFFF;
     justify-content: left;
+}
+
+.container-2 {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    height: 1165px;
+    width: 1240px;
+}
+
+.container-3 {
+    display: flex;
+    flex-direction: column;
+    width: 1240px;
+    height: 365px;
+    gap: 13px;
+    opacity: 1;
+    border-radius: 8px;
+}
+
+.container-4 {
+    display: flex;
+    justify-content: space-between;
+    width: 1240px;
+    height: 76px;
+    opacity: 1;
+    padding: 16px 24px;
+    background-color: #F9FAFB;
+    border: 1px solid #E5E7EB;
+    align-self: center;
+}
+
+.container-5 {
+    display: flex;
+    flex-direction: column;
+    /* min-width: 139px;
+    height: 44px; */
+    margin: 0;
+    gap: 4px;
+    opacity: 1;
+    justify-content: center;
 }
